# visual-regression-scanner

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  build-dist.bat  build-dist.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  install.ps1  install.sh  pyproject.toml  run.bat  run.ps1  run.sh  setup.bat  setup.sh
.github/workflows/: ci.yml  cleanup-artifacts.yml  release.yml
docs/: index.html
docs/css/: precision.css
docs/js/: theme.js
src/visual_regression_scanner/: __init__.py  __main__.py  app.py  app.tcss  i18n.py
src/visual_regression_scanner/locale/: de.json  en.json
src/visual_regression_scanner/models/: history.py  robots.py  scan_result.py  settings.py  sitemap.py
src/visual_regression_scanner/screens/: about.py  diff_detail.py  history.py  reset_confirm.py  scan_mode.py  settings.py
src/visual_regression_scanner/services/: baseline.py  comparator.py  image_viewer.py  rate_limit.py  reporter.py  screenshotter.py
src/visual_regression_scanner/widgets/: diff_detail_view.py  image_preview.py  results_table.py  summary_panel.py
tests/: conftest.py  test_history.py  test_i18n.py  test_image_preview.py  test_rate_limit.py  test_robots.py  test_safe_defaults.py  test_scan_rate_limit.py  test_settings.py
