[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-regression-scanner"
version = "1.2.0"
description = "TUI tool to detect visual regressions on websites via screenshot comparison"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Michael Blaess"}]
dependencies = [
    "textual>=0.40",
    "rich>=13.0",
    "playwright>=1.40",
    "httpx>=0.25",
    "Pillow>=10.0",
    "textual-themes @ git+https://github.com/michaelblaess/textual-themes.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "poethepoet>=0.29",
    "ruff>=0.3",
]

[project.scripts]
visual-regression-scanner = "visual_regression_scanner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.poe.tasks]
run = { cmd = "python -m visual_regression_scanner", help = "Startet visual-regression-scanner" }
test = { cmd = "pytest", help = "Tests sequentiell (schnell bei Unit-Tests)" }
test-parallel = { cmd = "pytest -n auto", help = "Tests parallel (fuer langsame Test-Suiten)" }
cov = { cmd = "pytest --cov=visual_regression_scanner --cov-report=term-missing", help = "Tests + Coverage" }
typecheck = { cmd = "mypy src", help = "mypy strict ueber src/" }
lint = { cmd = "ruff check .", help = "Ruff Linting" }
fmt = { cmd = "ruff format .", help = "Ruff Formatting" }
fix = { cmd = "ruff check --fix .", help = "Ruff Auto-Fix" }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501", "ASYNC109", "ASYNC240", "E402", "N806"]
